data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_479.wast
;; 10. **`nop` in Conditional Assignment Prior to `br_if`**:     Insert `nop` in the code preceding a conditional assignment that is later checked by a `br_if` instruction. Validate that the `nop` does not disrupt this condition evaluation sequence, leading to accurate branching.

(assert_invalid
  (module
    (func $conditional-br-if 
      (i32.const 1)
      (nop)
      (br_if $label_if (i32.eq (i32.const 0) (i32.const 1)))
      (return)
      $label_if
    )
  )
  "type mismatch"
)